frame/support/test/tests/pallet_ui/pallet_doc_multiple_args.stderr
error: The `pallet_doc` attribute must receive only one argument. Supported format: `pallet_doc(PATH)`
 --> tests/pallet_ui/pallet_doc_multiple_args.rs:3:1
  |
3 | #[pallet_doc("A", "B")]
  | ^
